fixed compile errors in React and fixed the goggles image cutoff issue

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -146,7 +146,7 @@ body {
   position: relative;
   width: 100%;
   height: 0;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .ratio-inner {
